// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/MaxHeight > handles % value 1`] = `
{
  "classNames": [
    "_root_bbb71a",
    [
      "_--type-literal_bbb71a",
    ],
  ],
  "variables": {
    "--rs-max-h-s": "50%",
  },
}
`;

exports[`Styles/MaxHeight > handles px value 1`] = `
{
  "classNames": [
    "_root_bbb71a",
    [
      "_--type-literal_bbb71a",
    ],
  ],
  "variables": {
    "--rs-max-h-s": "50px",
  },
}
`;

exports[`Styles/MaxHeight > handles responsive value 1`] = `
{
  "classNames": [
    "_root_bbb71a",
    [
      "_--type-literal_bbb71a",
      "_--type-literal--l_bbb71a",
    ],
  ],
  "variables": {
    "--rs-max-h-l": "50%",
    "--rs-max-h-s": "50px",
  },
}
`;

exports[`Styles/MaxHeight > handles undefined value 1`] = `null`;

exports[`Styles/MaxHeight > handles unit value 1`] = `
{
  "classNames": [
    "_root_bbb71a",
    [
      "_--type-unit_bbb71a",
    ],
  ],
  "variables": {
    "--rs-max-h-s": 5,
  },
}
`;
